# promptsynth

./: .gitignore  CMakeLists.txt  COPYING  README.md  options.txt  promptsynth.c  promptsynth.h  promptsynth_main.c  promptsynth_test.c
.github/workflows/: build.yml
